--- a/index_style.css
+++ b/index_style.css
@@ -2,22 +2,59 @@ body{
     margin: 0;
 }
 
+@font-face {
+  font-family: myFirstFont;
+  src: url(LeagueGothic-Regular.otf);
+}
+  
+
 #container{
     display: flex;
     justify-content: flex-end;
     justify-content: space-around;
     align-items: center;
-    max-height: 100px;
-    height: 120px;
+    max-height: 150px;
+    height: 150px;
     border: solid 1px;
-    background-color: aliceblue;
+    background-color: #12161c;
+    padding: 0 0 20px ;
+}
+a, a:link, a:visited, a:active{
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 #moon_img{
-    width: 50px;
-    height: 50px;
+    width: 120px;
+    height: 120px;
     border-radius: 25%;
+    margin-right: 40%;
 }
  #home{
-    margin-left: 40%;
+    margin-left: 15%;
  }
+
+.welcome_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10em 0;
+}
+
+.welcome{
+    background-color: antiquewhite;
+    font-size: 40px;
+    text-align: center;
+    display: inline-block;
+}
+
+.lan_img{
+    width: 200px;
+    display: inline-block;
+}
