--- a/navbar_style.css
+++ b/navbar_style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Crete Rounds";
+    src: url(fonts/CreteRound-Regular.ttf) format("truetype");
+}
+
+
 body{
     margin: 0;
 }
@@ -18,6 +24,8 @@ a, a:link, a:visited, a:active{
     color: white;
     font-size: 20px;
     text-decoration: none;
+    font-family: "Crete Rounds";
+    font-weight: 100;
 }
 
 a:hover{
