--- a/navbar_style.css
+++ b/navbar_style.css
@@ -6,6 +6,7 @@
 
 body{
     margin: 0;
+    overflow-x: hidden;
 }
 
 
@@ -14,30 +15,30 @@ body{
     justify-content: flex-end;
     justify-content: space-around;
     align-items: center;
-    max-height: 150px;
     height: 150px;
-    border: solid 1px;
-    background-color: #12161c;
-    padding: 0 0 20px ;
+    background-color: #162421;
+    padding: 20px 0;
+    width: 100%;
 }
 a, a:link, a:visited, a:active{
-    color: white;
-    font-size: clamp(15px, 1.5vw, 50px);
+    color:whitesmoke;
+    font-size: 100%;
     text-decoration: none;
     font-family: "Crete Rounds";
-    margin-right: clamp(5px, 2rem, 5rem);
-    
+    margin-right: clamp(3px, 1rem, 4rem);
+    padding: 15px;
 }
 
 a:hover{
-    text-decoration: underline;
+    border: 3px solid #5D7D8E;
+    border-radius: 15px; 
+    background: #5D7D8E;
+    color: whitesmoke;
 }
 
-#moon_img{
-    width: 120px;
-    height: 120px;
+#dev_img{
     border-radius: 25%;
-    margin-right: clamp(1px, 40%, 45%);
+    margin-right: 30%
 }
 
 #home{
